fixed gap in modal

--- a/angular-client/src/app/photos/engagement-photos/engagement-photos.component.css
+++ b/angular-client/src/app/photos/engagement-photos/engagement-photos.component.css
@@ -12,16 +12,13 @@ img:hover {
     padding: 0 !important;
     margin: 0;
     background-color: rgba(0,0,0,0.5);
+    width: 100vw;
 }
 
 #photoModal img {
     border: 0;
     padding: 0;
     margin: 0;
-}
-
-.modal-backdrop {
-    opacity: 0.8 !important;
 }
 
 .close {
@@ -43,11 +40,6 @@ a.carousel-control-prev, a.carousel-control-next {
 
 div.modal-dialog.modal-dialog-centered {
     padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
-div.modal-content.carousel-inner {
-    width: 100%;
+    width: 100vw;
     height: 100%;
 }
